# healthcare-aigent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .uvrc  GEMINI.md  README.md  SETUP.md  pyproject.toml  pytest.ini  requirements.txt  setup_envs.sh  test_matrix.py
.cursor/rules/: core-principles.mdc  cursor-rules-definition.mdc  docstring-style.mdc  import-style.mdc  python-formatting.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: ci.yml
ansible/playbooks/: setup_python_envs.yml  setup_python_envs_detailed.yml  setup_system.yml  verify_vault.yml
docs/: Ansible.md  CLAUDE.md  SpeakerVerse.md  architecture.md  ci_cd.md  crewai.md  development.md  development_environment.md  installation.md  language.md  linting.md  migration_summary.md  ollama.md  progress.md  tdd_vibe_coding.md  technical_implementation.md  testing.md  uv_migration.md
notebooks/: create_notebook.py  crewai_llm_test.ipynb  run_crewai_llm.py
scripts/: __init__.py  lint.py
src/: __init__.py  agents.py  llm_config.py  main.py  tasks.py  utils.py
src/agents/: __init__.py  clinical_extractor.py  language_assessor.py  preprocessing_agent.py  quality_control_agent.py  summarization_agent.py
src/api/: api_server.py
src/langflow_poc/: README.md  debug_langflow.py  patient_data.py  test_ollama.py
src/langflow_poc/custom_components/: __init__.py  patient_loader.py
src/llm/: __init__.py  base.py  circuit_breaker.py  config.py  fallback.py  llm_factory.py  ollama_llm.py  openai_llm.py
src/tasks/: __init__.py  assess_language_task.py  extract_clinical_task.py  preprocess_task.py  quality_control_task.py  summarize_task.py
src/tools/: __init__.py  database_interface.py  database_tools.py  logging_tools.py  medical_tools.py  mock_database.py  web_tools.py
tests/: __init__.py  conftest.py  pytest.ini  test_environment.py  test_matrix.py
tests/integration/: test_agent_system.py  test_api.py  test_llm_connectivity.py  test_llm_factory_integration.py
tests/performance/: test_llm_performance.py
tests/unit/: test_agents.py  test_llm_adapters.py  test_llm_config.py  test_llm_factory.py  test_llm_fallback.py  test_tasks.py  test_tools.py
