[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthcare-aigent"
version = "0.1.0"
description = "Healthcare AI Agent System"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Pieter Kuppens", email = "pieter.kuppens@gmail.com" }
]
# Core dependencies with minimum versions for latest security updates
dependencies = [
    "crewai>=0.102.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langchain-ollama>=0.0.1",
    "langflow>=1.3.4",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "json5>=0.9.14",
    "ruff>=0.11.5",
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.23.0",
    "requests-mock>=1.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
healthcare-aigent = "src.main:main"
healthcare-aigent-api = "src.api.api_server:app"
lint = "scripts.lint:main"

[tool.ruff]
line-length = 132
target-version = "py311"

[tool.ruff.lint]
# Enable basic error checking, import sorting, and simple fixes
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (simple modernization)
]
# Ignore specific rules that are too strict
ignore = [
    "E501",   # line too long (handled by formatter)
    "E203",   # whitespace before ':' (conflicts with black)
    "E402",   # module level import not at top of file
    "F401",   # imported but unused (can be useful for __init__.py)
    "F841",   # local variable assigned but never used
]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

# UV configuration for dependency management
[tool.uv]
required-version = ">=0.1.0"
resolution = "highest"  # Always use latest compatible versions
compile-bytecode = true
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.23.0",
    "requests-mock>=1.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
]

# Add uv-specific test configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto" 
